style:  implement global theme and variables
Define the core color palette and custom CSS properties to ensure visual consistency across all components.

Establish the high-contrast border and hard-shadow styles to replicate the neo-brutalist aesthetic of the UI design.

Configure global typography and spacing rules to maintain the hand-drawn feel throughout the application.

Resolves #2

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
+.githooks/
 
 # Visual Studio Code
 .vscode/
@@ -29,6 +30,9 @@ yarn-error.log
 !.vscode/mcp.json
 .history/*
 
+# AI Instructions
+.agents/
+
 # Miscellaneous
 /.angular/cache
 .sass-cache/
@@ -38,6 +42,7 @@ yarn-error.log
 testem.log
 /typings
 __screenshots__/
+temporal_template/
 
 # System files
 .DS_Store
