ci: update workflow triggers to match branch rename
Updates the pull_request trigger in the workflow configuration to reflect the "master" branch.

--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -9,7 +9,7 @@ on:
       - '.gitignore'     # Ignora cambios en gitignore
       - 'LICENSE'        # Ignora la licencia
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 env:
   REGISTRY: ghcr.io
