confs(ci): optimize workflow for faster pull request feedback
- Configured conditional platforms: AMD64 for PRs and multi-arch for Master.
- Disabled image pushing on pull request events.

Refs #28

--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -57,7 +57,11 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
-          platforms: linux/amd64,linux/arm64
+          # Solo hace push cuando se hace merge a master, en PR solo build (para revisar que no falle)
+          push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+          # En PR solo AMD64 (rápido), en Main ambas (para tu server)
+          platforms: ${{ github.event_name == 'push' && 'linux/amd64,linux/arm64' || 'linux/amd64' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
